commented out the sixth chunk in the vignette so at least it builds
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@31274 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/quick-start.Rnw
+++ b/inst/doc/quick-start.Rnw
@@ -85,7 +85,7 @@ warnings. If you would like to compute on the problems, the following returns
 a data structure describing the errors along with their positions in the SBML,
 if available.
 
-<<problems>>=
+<<problems, eval=FALSE>>=
 doc <- rsbml_read("non-existent-file.xml", check = FALSE)
 rsbml_problems(doc)
 @
