--- a/inst/doc/quick-start.Rnw
+++ b/inst/doc/quick-start.Rnw
@@ -81,12 +81,14 @@ rsbml_check(doc)
 @
 
 If there were any problems with the document, they would be communicated as
-warnings. If you would like to compute on the problems, the following returns
-a data structure describing the errors along with their positions in the SBML,
-if available.
+R console messages, warnings or errors. If you would like to compute on 
+the problems, the following returns a data structure describing the 
+errors along with their positions in the SBML, if available. Passing 
+\texttt{quiet = TRUE} avoids automatic emission of the problems as R 
+console messages and warnings.
 
-<<problems, eval=FALSE>>=
-doc <- rsbml_read("non-existent-file.xml", check = FALSE)
+<<problems>>=
+doc <- rsbml_read("non-existent-file.xml", quiet = TRUE)
 rsbml_problems(doc)
 @
 
