modified one test
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@32021 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/quick-start.Rnw
+++ b/inst/doc/quick-start.Rnw
@@ -89,7 +89,7 @@ signals: \textit{SBMLFatal}, \textit{SBMLError} and
 resulting from a non-existent file and prints the message:
 <<problems>>=
 bad <- tryCatch(rsbml_read("non-existent-file.xml"), 
-                SBMLError = function(fatal) print(fatal$msg))
+                error = function(fatal) print(fatal$msg))
 @
 
 \section*{Writing SBML documents}
