Fix vignette for change to rsbml_read signature.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@32070 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/quick-start.Rnw
+++ b/inst/doc/quick-start.Rnw
@@ -29,7 +29,7 @@ It is also possible to parse an R character vector instead of an external file.
 
 <<read>>=
 library(rsbml)
-doc <- rsbml_read(system.file("sbml", "GlycolysisLayout.xml", package = "rsbml"))
+doc <- rsbml_read(system.file("sbml", "GlycolysisLayout.xml", package = "rsbml"), dom = FALSE)
 @
 
 If errors are encountered, the function throws an error along with
