Add NAMESPACE, bump version.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@38153 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/quick-start.Rnw
+++ b/inst/doc/quick-start.Rnw
@@ -64,7 +64,7 @@ a Bioconductor graph object, type the following:
 
 <<graph>>=
 g <- rsbml_graph(doc)
-nodes(g)
+graph::nodes(g)
 @
 
 Note that the list of node ID's contains all of the species ID's retrieved from
