note about using brew to install libsbml on the Mac
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/rsbml@127147 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/INSTALL
+++ b/INSTALL
@@ -2,3 +2,6 @@ To build rsbml on Windows, please download and unpack libsbml 5.10.0
 and point to the extracted directory with the LIBSBML_PATH environment
 variable. It might work with some other versions, but we have only
 really tested 5.10.0.
+
+To build rsbml on the Mac, first install libsbml with:
+`brew install homebrew/science/libsbml`.
